--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body>
     <header>
       <div class="logo">
-        <img src="/img/rumah tongkonan.png" alt="" />
+        <img src="img/rumah tongkonan.png" alt="" />
         <div class="logo-text">
           <a href="#beranda" id="satu">KEBUDAYAAN TANA TORAJA</a>
           <a href="#beranda">SULAWESI SELATAN, INDONESIA</a>
@@ -38,7 +38,7 @@
       </div>
     </header>
     <section id="beranda" class="beranda">
-      <img src="/img/tongkonan.png" alt="" />
+      <img src="img/tongkonan.png" alt="" />
       <div class="row">
         <h1>
           Jaga Budaya <br />
@@ -111,10 +111,10 @@
               mampu membangun tongkonan yang mulia.
             </p>
           </div>
-          <img src="/img/Tongkonan1.jpg" />
+          <img src="img/Tongkonan1.jpg" />
         </div>
         <div class="container-dua">
-          <img src="/img/ukiranToraja 2.jpg" />
+          <img src="img/ukiranToraja 2.jpg" />
           <div class="row">
             <h2>Ukiran Toraja</h2>
             <p>
@@ -146,7 +146,7 @@
       </p>
       <div class="container">
         <div class="row">
-          <img src="/img/bajuadat1.jpeg" />
+          <img src="img/bajuadat1.jpeg" />
           <h3>Pakaian Adat</h3>
           <p>
             Baju Pokko merupakan baju adat dari suku Toraja, yang digunakan
@@ -156,7 +156,7 @@
           </p>
         </div>
         <div class="row">
-          <img src="/img/RambuSolo.jpg" />
+          <img src="img/RambuSolo.jpg" />
           <h3>Rambu Solo'</h3>
           <p>
             Rambu Solo' adalah ritual penguburan mayat suku Toraja untuk
@@ -166,7 +166,7 @@
           </p>
         </div>
         <div class="row">
-          <img src="/img/maNene1.jpg" />
+          <img src="img/maNene1.jpg" />
           <h3>Ma' Nene</h3>
           <p>
             Ma' nene adalah upacara mengenang atau menghormati kembali jenasah
@@ -182,22 +182,22 @@
         <h1>Destinasi Budaya</h1>
         <div class="container">
           <div class="card">
-            <img src="/img/Wisata-Museum-Ne-Gandeng-.jpg" alt="">
+            <img src="img/Wisata-Museum-Ne-Gandeng-.jpg" alt="">
             <h2>Museum Ne' Gandeng</h2>
             <p>Lokasi: Malakiri, Tagari, Kec. Balusu, Kabupaten Toraja Utara, Sulawesi Selatan 91853</p>
           </div>
           <div class="card">
-            <img src="/img/ketekesu.jpg" alt="">
+            <img src="img/ketekesu.jpg" alt="">
             <h2>Kete Kesu</h2>
             <p>Lokasi : Jl. Ke’te’ Kesu’, Kampung Bunoran, Kelurahan Panta’rukan Lolo, Kecamatan Kesu, Toraja Utara, Sulawesi Selatan, Indonesia, 91834.</p>
           </div>
           <div class="card">
-            <img src="/img/Lokomata-1.jpg" alt="">
+            <img src="img/Lokomata-1.jpg" alt="">
             <h2>Lokomata</h2>
             <p>Lokasi: 3VW6+8XF, Unnamed Road,, Sesean Matallo, Kec. Sesean Suloara, Kabupaten Toraja Utara, Sulawesi Selatan 91833</p>
           </div>
           <div class="card">
-            <img src="/img/Londa.jpg" alt="">
+            <img src="img/Londa.jpg" alt="">
             <h2>Londa</h2>
             <p>Lokasi : Lembang Sangbua. Kesu, Kec. Tadongkon, Kabupaten Toraja Utara</p>
           </div>
